# sams

./: .gitignore  DATA_README.docx  DATA_README.md  Makefile  env_new.yaml  environment.yml  pyproject.toml  readme.MD  requirements.txt  setup.py
config/: catalog.yaml  datasets.yaml
notebooks/: 0.01-ar-sams-student.Rmd  0.02-ar-sams-student.Rmd  0.02-ym-sams-students-exploratory.ipynb  0.02-ym-student-data-exploratory.rmd  0.02-ym-student-data-types.rmd  0.04-ym-jun-5-report.ipynb  0.05-ym-hss-exploratory.ipynb  01_exploratory_cpc_placement.Rmd  1.00-ym-sctevt-cleaning.ipynb  1.01-ym-sams-students-cleaning.ipynb  4.01-ym-oct2024-report.rmd  4.02-ar-oct-analysis.Rmd  4.02-ar-oct-presentation.Rmd  4.03-ym-nov2024-report.Rmd  4.04-ym-nov2024-report.Rmd  4.05-ym-nov2024-presentation.Rmd  4.06-ym-nov2024-report.rmd  Markdown_finding_duplicates.Rmd  bse_chse_hss_deg_integration.ipynb  deg_data-v0.ipynb  diploma-common-id.ipynb  diploma.ipynb  file_check.ipynb  hss-data.ipynb  hss_dag.ipynb  hss_deg_summary.ipynb  integrating-unique-key.ipynb  iti-common-id.ipynb  my_pipeline.py  option-data.ipynb  option_pipeline.py  paths.R  readme.ipynb  roll-no-check.ipynb  unique-key-merge.ipynb  unique-key.ipynb  unique_key_validation.ipynb  variable_missing_summary.xlsx
output/: Institute Count.xlsx  Student Count.xlsx
sams/: config.py  pipeline.py  util.py  utils.py
scripts/: box_mirror.py  build_dataset.py  build_report.R  build_reports.R  build_sams_db.py  config.R  decrypt.sh  download_from_box.py  hash.R  iti-summary.py  nov2024_report_exhibits.py  preprocess_data.py  run.py  (+3 more)
(+36 files in other folders)
