[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "graphviz>=0.21",
    "ipython>=8.37.0",
    "jupyterlab>=4.4.10",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "polars>=1.35.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "sf-hamilton>=1.89.0",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
